Styled footnotes, added more margins to create space, fixed spacings for top navigation, centre-aligned view pricing

--- a/style.css
+++ b/style.css
@@ -385,8 +385,13 @@ nav a {
     display: flex;
     justify-content: space-evenly;
     /* width: 50%; */
-    flex: 0 1 40%;
-    margin-right: 20px;
+    flex: 0 1 30%;
+    /* margin-right: 20px; */
+    padding-right: 20px;
+}
+
+.links a {
+    padding-right: 20px;
 }
 .container {
     margin: 108px 10% 0 10%;
@@ -494,7 +499,7 @@ footer,
 }
 
 .feature-block-1 {
-    margin-top: 64px;
+    margin-top: 100px;
     /* width: 28%; */
     flex: 0 1 350px;
 }
@@ -508,7 +513,8 @@ footer,
 .features-2 {
     display: flex;
     text-align: center;
-    margin-top: 64px;
+    width: 100%;
+    margin: 100px 0 100px 0;
     flex-wrap: wrap;
 }
 
@@ -538,6 +544,21 @@ footer,
 
 .feature-text-3 {
     order: 5;
+}
+
+.footnote {
+    color: #495057;
+    font-size: 10px;
+    margin: 0.5em;
+}
+
+.to-pricing {
+    text-align: center;
+    margin: 100px 0 0 0;
+}
+
+footer {
+    margin: 200px 0 100px 0;
 }
 
 table {
